fix(#76): dark mode global config (#80)

--- a/src/theme/antd/vars.less
+++ b/src/theme/antd/vars.less
@@ -33,6 +33,46 @@
 
 :root {
   --PC: @primary-color;
+  // --bg-input: #ffffff;
+  // --bg-input-error: #fff6f6;
+  // --bg-inverse: rgba(244, 242, 240, 0.91);
+  // --bg-menu: #ffffff;
+  // --bg-page: #f5f3f1;
+  // --bg-table: #ffffff;
+  // --bg-tabs: #ffffff;
+  // --bg-toggle: #e4e5e6;
+  // --border-table: #f1efed;
+  // --border-tabs: #f1efed;
+  // --color-checkbox: rgba(34, 36, 38, 0.15);
+  // --color-error: rgba(139, 0, 0);
+  // --color-label: rgba(78, 78, 78, 0.66);
+  // --color-summary: rgba(0, 0, 0, 0.6);
+  // --color-table-foot: rgba(78, 78, 78, 0.66);
+  // --color-table-head: rgba(78, 78, 78, 0.66);
+  // --color-text: #4e4e4e;
+}
+
+[data-theme='dark'] {
+  --bg-input: #38393f;
+  // --bg-input-error: #48393f;
+  // --bg-inverse: rgba(78, 78, 78, 0.66);
+  --bg-menu: #26272c;
+  --bg-page: #26272c;
+  --bg-table: #3b3d3f;
+  --bg-tabs: #38393f;
+  --bg-toggle: #58595f;
+  // --border-table: #343536;
+  // --border-tabs: #343536;
+  // --color-checkbox: rgba(78, 78, 78, 0.66);
+  // --color-error: rgba(255, 83, 83, 0.8);
+  --color-label: rgba(244, 242, 240, 0.45);
+  // --color-summary: rgba(112, 89, 67, 0.75);
+  // --color-table-foot: rgba(254, 240, 240, 0.66);
+  // --color-table-head: rgba(254, 240, 240, 0.66);
+  --color-text: rgba(244, 242, 240, 0.9);
+}
+
+[data-theme='light'] {
   --bg-input: #ffffff;
   // --bg-input-error: #fff6f6;
   // --bg-inverse: rgba(244, 242, 240, 0.91);
